styles/wallet.module.css
.walletGrid {
  display: grid;
  grid-template-columns: repeat(auto-fill, 160px);
  grid-gap: 20px;
  padding: 20px 0;
  justify-content: center;
}

@media (max-width: 440px) {
  .walletGrid {
    grid-template-columns: repeat(auto-fill, 140px);
    grid-gap: 15px;
  }
  .card {
    width: 140px;
  }
}

.card {
  width: 160px;
  max-width: 100%;
  aspect-ratio: 160 / 180;
  transition: transform 0.2s ease, opacity 0.2s ease, box-shadow 0.2s ease;
}

.indicators {
  display: flex;
  align-items: center;
  column-gap: 0.2rem;
  margin-left: auto;
  padding: 10px;
  position: absolute;
  top: 0;
  right: 0;
}

.indicator {
  width: 14px;
  height: 14px;
  background-color: var(--theme-toolbarHover) !important;
}

.indicator.success {
  color: var(--bs-green) !important;
  background-color: var(--bs-green) !important;
  border: 1px solid var(--bs-success);
}

.indicator.error {
  color: var(--bs-red) !important;
  background-color: var(--bs-red) !important;
  border: 1px solid var(--bs-danger);
}

.indicator.warning {
  color: var(--bs-orange) !important;
  background-color: var(--bs-orange) !important;
  border: 1px solid var(--bs-secondary);
}

.indicator.disabled {
  color: var(--theme-toolbarHover) !important;
  background-color: var(--theme-toolbarHover) !important;
  border: 1px solid var(--theme-toolbarActive);
}

.walletLogo {
  max-width: 100%;
  max-height: 40%;
  margin: auto;
  font-size: 1rem;
  line-height: 1;
}

.walletBanner {
  max-width: min(256px, 100vw);
  max-height: 100px;
  padding: 0 15px 1rem 15px;
}

.attach {
  color: var(--bs-body-color) !important;
  text-align: center;
}

.attach svg {
  fill: var(--bs-body-color) !important;
  margin-left: 0.5rem;
}

.nav {
  justify-content: center;
  font-size: 110%;
  gap: 0 0.5rem;
}

.nav :global .active {
  border-bottom: 2px solid var(--bs-primary);
}

.form {
  display: flex;
  justify-content: center;
  max-width: 740px;
  width: 100%;
  padding-right: 15px;
  padding-left: 15px;
  margin-top: 5rem;
  flex-direction: column;
}

.separator {
  display: flex;
  align-items: center;
  text-align: center;
  color: var(--theme-grey);
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
}

.separator::before,
.separator::after {
  content: '';
  flex: 1;
  border-bottom: 1px solid var(--theme-grey);
}

.separator:not(:empty)::before {
  margin-right: .25em;
}

.separator:not(:empty)::after {
  margin-left: .25em;
}

.passphrase {
  display: grid;
  gap: 0.5rem;
  grid-template-columns: repeat(auto-fill, minmax(110px, 1fr));
  container-type: inline-size;
}

